@@ -73,8 +73,6 @@
           <arguments>
             <argument>--module-path</argument>
             <argument>mods-mvn</argument>
-            <argument>--add-modules</argument>
-            <argument>Core,Common,CommonBullet,Asteroid,Player,Enemy,Bullet,Collision</argument>
             <argument>--module</argument>
             <argument>Core/dk.sdu.cbse.App</argument>
           </arguments>
@@ -123,27 +121,7 @@
         <plugins>
           <plugin>
             <artifactId>maven-dependency-plugin</artifactId>
-            <version>3.0.2</version>
-            <executions>
-              <execution>
-                <id>copy-installed</id>
-                <phase>install</phase>
-                <goals>
-                  <goal>copy</goal>
-                </goals>
-                <configuration>
-                  <artifactItems>
-                    <artifactItem>
-                      <groupId>${project.groupId}</groupId>
-                      <artifactId>${project.artifactId}</artifactId>
-                      <version>${project.version}</version>
-                      <type>jar</type>
-                    </artifactItem>
-                  </artifactItems>
-                  <outputDirectory>../mods-mvn</outputDirectory>
-                </configuration>
-              </execution>
-            </executions>
+
           </plugin>
         </plugins>
       </build>
